--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "klasha-dashboardv1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://abbeyseto.github.io/dashboard/",
+  "homepage": "http://abbeyseto.github.io/dashboard",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
